GetORMappingResult<T, U>メソッドの不具合臨時対応 GetORMappingResult<U>メソッドの利用を現時点では推奨する

--- a/MtrSclTs8DataMapper/TestApp/TestApp.csproj
+++ b/MtrSclTs8DataMapper/TestApp/TestApp.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -60,7 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MtrSclTs8DataMapper\KORMapper.csproj">
+    <ProjectReference Include="..\KORMapper\KORMapper.csproj">
       <Project>{F39E1F12-FB97-4132-AB0E-FCEAE769CED2}</Project>
       <Name>KORMapper</Name>
     </ProjectReference>
