--- a/KORMapper/KORMapper/KORMapper.csproj
+++ b/KORMapper/KORMapper/KORMapper.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Security">
+      <HintPath>..\packages\Npgsql.2.0.12.1\lib\net35\Mono.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="MySQL.Data">
+      <HintPath>..\packages\MySql.Data.6.7.4\lib\net20\MySQL.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Npgsql">
+      <HintPath>..\packages\Npgsql.2.0.12.1\lib\net35\Npgsql.dll</HintPath>
+    </Reference>
+    <Reference Include="policy.2.0.Npgsql">
+      <HintPath>..\packages\Npgsql.2.0.12.1\lib\net35\policy.2.0.Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,6 +56,7 @@
     <Compile Include="ClsCommonModel.cs" />
     <Compile Include="ConvertUtil.cs" />
     <Compile Include="DataMapperAttribute.cs" />
+    <Compile Include="Exception\KORMapperException.cs" />
     <Compile Include="IDBMapper.cs" />
     <Compile Include="IDBMapperInsert.cs" />
     <Compile Include="IDBMapperSelect.cs" />
@@ -55,6 +69,9 @@
     <Compile Include="Postgresql\PgSqlDbMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer\SqlServerDbMapper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
